@@ -1,3 +1,13 @@
+2014-06-30  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>
+
+        Add missing ENABLE(DFG_JIT) guards
+        https://bugs.webkit.org/show_bug.cgi?id=134444
+
+        Reviewed by Darin Adler.
+
+        * dfg/DFGFunctionWhitelist.cpp:
+        * dfg/DFGFunctionWhitelist.h:
+
 2014-06-29  Yoav Weiss  <yoav@yoav.ws>
 
         Add support for HTMLImageElement's sizes attribute
